# EMBox

./: CMakeLists.txt  README.md  main.c  peripherals.c  peripherals.h  scu.h  smpc.c  smpc.h
audio/c_files/: scsp.c
audio/headers/: scsp.h
sh2/: sh2.c  sh2.h
video_processors/: graphicManager.h  graphicsManager.c  vdp1.c  vdp1.h  vdp2.c  vdp2.h
